--- a/StudentInfoManager/StudentInfoManager.csproj
+++ b/StudentInfoManager/StudentInfoManager.csproj
@@ -26,4 +26,9 @@
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+  </ItemGroup>
+
 </Project>
